--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,24 @@ celerybeat-schedule
 venv/
 ENV/
 
+# vim things
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
+
 # Spyder project settings
 .spyderproject
 .spyproject
